--- a/style_chmduquesne.tex
+++ b/style_chmduquesne.tex
@@ -17,10 +17,10 @@ $endif$
 \setupcolor[hex]
 \definecolor[titlegrey][h=757575]
 \definecolor[sectioncolor][h=397249]
-\definecolor[rulecolor][h=9cb770]
+\definecolor[rulecolor][h=6c9750]
 
 % Enable hyperlinks
-\setupinteraction[state=start, color=sectioncolor]
+\setupinteraction[state=start, color=rulecolor]
 
 \setuppapersize [$if(papersize)$$papersize$$else$letter$endif$][$if(papersize)$$papersize$$else$letter$endif$]
 \setuplayout    [width=middle, height=middle,
