--- a/style_chmduquesne.tex
+++ b/style_chmduquesne.tex
@@ -51,8 +51,8 @@ $endif$
 
 \definedescription
   [description]
-  [headstyle=bold, style=normal,
-   location=hanging, width=18mm, distance=14mm, margin=0cm]
+  [headstyle=small, style=normal,
+   location=inmargin, width=18mm, distance=14mm, margin=0cm]
 
 \setupitemize[autointro, packed]    % prevent orphan list intro
 \setupitemize[indentnext=no]
